--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+/* Estilos globales */
+body {
+  font-family: Arial, sans-serif;
+  font-size: 22px;
+  color: #555;
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/*a:hover {
+  text-decoration: underline;
+}*/
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Estilo para el contenido principal */
+main {
+  margin-bottom: 100px;
+  /* Agrega un margen inferior para dejar espacio para el footer */
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Ajuste para limitar el número máximo de elementos por fila */
+@media screen and (max-width: 1200px) {
+  .Seccion2 article .Hotel {
+    width: calc(33.33% - 20px);
+    /* Reducimos el ancho para mostrar 3 elementos por fila */
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 800px) {
+  .Seccion2 article .Hotel {
+    width: calc(50% - 20px);
+    /* Reducimos el ancho para mostrar 2 elementos por fila */
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .Seccion2 article .Hotel {
+    width: calc(100% - 20px);
+    /* Reducimos el ancho al 100% para mostrar 1 elemento por fila */
   }
 }
